Prevent jumping of boxes

--- a/frontend/src/styles/Admin.css
+++ b/frontend/src/styles/Admin.css
@@ -111,6 +111,10 @@ span.optional-star {
   min-height: 5rem;
 }
 
+.queue-overview {
+  min-height: 125px;
+}
+
 .queueboard-wrapper {
   display: flex;
   min-height: 100vh;
@@ -170,3 +174,4 @@ span.optional-star {
   width: 50px;
   height: 50px;
 }
+
